add Aufgabe 3